# chess

./: .gitignore  Cargo.toml  README.md
examples/: perft.rs
src/: ai.rs  app.rs  board.rs  game.rs  lib.rs  main.rs  move_gen.rs  moves.rs  piece.rs  ui.rs  unsafe_demo.rs
tests/: integration.rs  snapshot.rs
